fix corner of searchbar to follow expected behavior on mobile

--- a/client/src/components/Searchbar.module.css
+++ b/client/src/components/Searchbar.module.css
@@ -56,7 +56,8 @@
 }
 
 @media (max-width: 500px) {
-  .Searchbar__submit.Searchbar__submit--active {
+  .Searchbar__submit.Searchbar__submit--active.Searchbar__submit--mobile {
     border-bottom-right-radius: 0;
+    transition: border-bottom-right-radius 0s;
   }
 }
